add new files 250119

--- a/w0d3/css/style.css
+++ b/w0d3/css/style.css
@@ -59,4 +59,14 @@ body {
   margin: 0 0 5px 0;
 }
 
+.block-left {
+  color: brown;
+  border: 2px solid black
+  
+}
 
+.block-center {
+  color:greenyellow;
+  border: 2px solid black
+  
+}
