--- a/w1d2/css/styleparalaxe.css
+++ b/w1d2/css/styleparalaxe.css
@@ -39,12 +39,15 @@ body {
 }
 
 .it {
+    height: 400px;
     background-image: url("http://lazy-tour.by/wp-content/uploads/2014/01/408541-2048x1341-1024x670.jpg");
 }
 
 .itt {
+    height: 400px;
     background-image: url("http://s1.1zoom.me/big0/519/Italy_Lake_Mountains_Winter_Houses_Lago_di_Sauris_538962_1280x768.jpg");
 }
 
 .end {
+    height: 400px;
 background-image: url("https://romantiki.ru/wp-content/uploads/users/visor/end5s.jpg"); }
